Full buffer extract example script

--- a/raster-buffer-extract/explore_buffer_extract.ipynb
+++ b/raster-buffer-extract/explore_buffer_extract.ipynb
@@ -11,7 +11,13 @@
     "fraster_extract is the fast, randomized point method. It is: \n",
     "1. Faster than typical rasterization-based methods (e.g. rasterstats)\n",
     "2. More flexible and precise than scanline methods \n",
-    "3. Able to use many zonalstats methods: mean, weighted mean, unique values, max, min, etc. Can expand to many more by adding functions to fraster_extract.py module"
+    "3. Able to use many zonalstats methods: mean, weighted mean, unique values, max, min, etc. Can expand to many more by adding functions to fraster_extract.py module\n",
+    "\n",
+    "However, there are downsides. Mainly:\n",
+    "1. Only works as a buffer from centroid currently (not from a full, irregular shaped polygon)\n",
+    "2. Can only handle equal area projections in meters or WGS84 (lat/lon)\n",
+    "\n",
+    "This notebook is to familiarize yourself with the different methods and the differences between them, both in terms of resulting statistics and in efficiency"
    ]
   },
   {
@@ -93,11 +99,11 @@
     "    gdf_poly['point_num'] = range(gdf_poly.shape[0])\n",
     "    gdf_poly.geometry = gdf.geometry.buffer(buffer_r)\n",
     "    # If the dir does not exist, create it\n",
-    "    if not os.path.isdir('data/outputs/'):\n",
-    "        os.mkdir('data/outputs/')\n",
+    "    if not os.path.isdir('../data/outputs/'):\n",
+    "        os.mkdir('../data/outputs/')\n",
     "\n",
     "    # Export the buffered point layer as a shapefile to use in zonal stats\n",
-    "    plot_buffer_path = 'data/outputs/plot_buffer.shp'\n",
+    "    plot_buffer_path = '../data/outputs/plot_buffer.shp'\n",
     "    gdf_poly.to_file(plot_buffer_path)\n",
     "\n",
     "    # Extract zonal stats\n",
@@ -368,7 +374,7 @@
    "outputs": [],
    "source": [
     "# Fully random\n",
-    "zstats_rand_mean, zstats_rand_max = random_buffer(gdf['coords'], ds, radius=50, n_sample=1000)"
+    "zstats_rand_mean, zstats_rand_max = fe.random_buffer(gdf['coords'], ds, radius=50, n_sample=1000)"
    ]
   },
   {
@@ -457,7 +463,7 @@
     "# Time it all\n",
     "t = timeit.Timer(lambda: zstats_buffer(gdf, 10))\n",
     "print('default', t.timeit(number=5))\n",
-    "t  = timeit.Timer(lambda: random_buffer(gdf['coords'], ds, radius=10, n_sample=4000))\n",
+    "t  = timeit.Timer(lambda: fe.random_buffer(gdf['coords'], ds, radius=10, n_sample=4000))\n",
     "print('random', t.timeit(number=5))\n",
     "t = timeit.Timer(lambda: slc_buffer(ds, np.array([gdf['coords'].x.values, gdf['coords'].y.values]), 10))\n",
     "print('scanline', t.timeit(number=5))"
